Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/096_procedure_used_in_return_in_procedure.xi
f()

g()
{
    return f()
}

//@PRACOWNIA
//@should_not_typecheck
